# AutoResearchClaw

./: config.researchclaw.example.yaml  pyproject.toml
researchclaw/: cli.py  health.py
researchclaw/llm/: anthropic_adapter.py
researchclaw/mcp/: server.py
researchclaw/metaclaw_bridge/: prm_gate.py
researchclaw/pipeline/: _helpers.py  executor.py  opencode_bridge.py  runner.py  stages.py
researchclaw/pipeline/stage_impls/: _execution.py  _literature.py  _review_publish.py
researchclaw/server/routes/: pipeline.py
researchclaw/servers/: dispatcher.py
tests/: test_fabrication_guards.py  test_minimax_provider.py  test_opencode_bridge.py  test_rc_executor.py  test_rc_health.py  test_rc_runner.py  test_ssh_and_colab_sandbox.py  test_v6_improvements.py
